--- a/css-design-systems/styles/button.css
+++ b/css-design-systems/styles/button.css
@@ -1,18 +1,100 @@
+.container-button {
+    display: block;
+}
+
 button {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
     height: 32px;
-    padding: 1px, 16px, 1px, 16px;
-    color: white;
     border-radius: 2px;
     border: none;
 }
 
+.feather {
+    width: 10px;
+    height: 10px;
+    fill: white;
+}
+/* Botão azul */
+
 .btn--blue {
     background-color: #0070D2;
+    color: white;
 }
 
 .btn--blue:hover {
     background-color: #005FB2;
+   
+}
+
+.btn--blue:focus {
+    box-shadow: 0 0 1px 1px #0070D2;
+}
+
+.btn--blue:disabled,
+.btn--blue[disabled] {
+  background-color: #C9C7C5;
+  color: white;
+}
+
+/* botão branco */
+.btn--white .feather {
+    fill: #0070D2;
+}
+
+.btn--white {
+    background-color: #FFFFFF;
+    color: #0070D2;
+    border: 1px solid #0070D2;
+    
+}
+
+.btn--white:hover {
+    background-color: #F4F6F9;
+   
+}
+
+.btn:focus {
+    box-shadow: 0 0 1px 1px #0070D2;
+}
+
+/* botões vermelhos*/
+
+.btn--red {
+    background-color: #C23934;
+    color: rgb(255, 255, 255);
+    
+}
+
+.btn--red:hover {
+    background-color: #A61A14;
+   
+}
+
+.btn--red:focus {
+    box-shadow: 0 0 1px 1px #0070D2;
+}
+
+/* botões verdes*/
+
+.btn--green {
+    background-color: #4BCA81;
+    color: #080707;
+    
+}
+
+.btn--green .feather {
+    fill: #080707;
 }
 
 
+.btn--green:hover {
+    background-color: #04844B;
+    color: white;
+   
+}
 
+.btn--green:focus {
+    box-shadow: 0 0 1px 1px #0070D2;
+}
