--- a/css-design-systems/styles/globals.css
+++ b/css-design-systems/styles/globals.css
@@ -16,11 +16,11 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background: #fafafa;
+    background: #d2d2d2;
 }
 
 .wrapper__content {
-    background: white;
+    background: #d2d2d2;
     border: 1px solid gainsboro;
     border-radius: 8px;
     padding: 32px;
@@ -32,3 +32,4 @@ body {
     margin: 32px 0;
     gap: 24px;
 }
+
