--- a/css-flags/styles.css
+++ b/css-flags/styles.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
     padding: 32px 16px;
     background: var(--page-background);
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 body {
@@ -95,7 +95,8 @@ body {
 /* ---------------------------------------------------------------------- */
 /* Kuwait */
 .flag--kuwait {
-    display: block;
+  
+    position: relative;
   }
   
   .kuwait-c-1 {
@@ -115,6 +116,17 @@ body {
       height:  calc(100% / 3);
       width: 100%;
   }
+.triangle{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    width: 100px;
+    height: 33%;
+    border-top: 75px solid transparent;
+    border-bottom: 75px solid transparent;
+    border-left: 100px solid #000000;
+}
 /* ---------------------------------------------------------------------- */
 
 
@@ -171,13 +183,52 @@ body {
 
 /* ---------------------------------------------------------------------- */
 /* Greece */
-.stripe {
+/*.stripe {
     height: calc(100% / 9);
-    
+
+*/
+
+.flag--greece {
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    gap: 25px;
 }
 
-.stripes--blue {
-    
+.square{
+    width: 125px;
+    height: 125px;
+    background-color: blue;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.square-stripe-horizontal {
+    display: flex;
+    position: absolute;
+    height: 25px;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+   
+}
+
+.square-stripe-vertical{
+    display: flex;
+    position: absolute;
+    height: 25px;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    transform: rotate(90deg);
+}
+
+.stripes {
+    width: 100%;
+    height: 25px;
+    background-color: blue;
 }
 /* ---------------------------------------------------------------------- */
 
@@ -194,13 +245,13 @@ body {
 
 .portugal-c-1 {
     background-color: green;
-    width: calc(100% / 2);
+    width: 45%;
     height: 100%;
 }
 
 .portugal-c-2 {
     background-color: red;
-    width: calc(100% / 2);
+    width: 55%;
     height: 100%;
 }
 
@@ -208,7 +259,7 @@ body {
     display: flex;
     z-index: 1;
     position: absolute;
-    
+    left:30%;
     width: 90px;
     height: 90px;
     background-color: yellow;
