--- a/exercicio-responsive/css/styles.css
+++ b/exercicio-responsive/css/styles.css
@@ -37,7 +37,7 @@ header {
 
 header h1 {
     width: 100%;
-   text-align: center;
+    text-align: center;
     font-size: 40px;
     font-weight: 600;
     color: var(--text-color-yellow);
@@ -59,7 +59,7 @@ header p {
     position: relative;
     display: flex;
     flex-direction: column;
-     height: 370px;
+    height: 370px;
 
 }
 
@@ -80,13 +80,9 @@ nav ul {
 
 }
 
-nav li{
-
-}
-
-nav a{
-    font-size: 14x;
-    font-weight: 1000;
+nav ul li a{
+    font-size: 16px;
+    font-weight: 600;
     text-decoration: none;
     color: var(--text-color-white);
 }
@@ -114,7 +110,7 @@ article {
     border-radius: 8px;
     border: 1px solid #5e5e5e;
     padding: 12px;
-    height: 313px;
+    height: auto;
     width: 21%;
     display: inline-block;
     background-color: #404040;
@@ -152,9 +148,9 @@ article {
 }
 
 .article-footer {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
-    padding-top: 30px;
+    padding-top: 15px;
     color: var(--text-color-blue);
 }
 
@@ -165,29 +161,46 @@ article {
 nav .view-more {
     display: block;
 } 
+
 @media (max-width: 768px) {
-    
+
+header {
+    padding: 10px;
+
+}
+
 nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 5%;
 }
 
     nav .view-more {
-    display: none;
+    display: none;  
    
 }
 
-    .bottom-nav {
-        display: block;
-    } 
-   body {
+.bottom-nav {
+    display: flex;
+    padding-top: 6%;
+    padding-bottom: 20%;
+    justify-content: center;   
+} 
+
+.bottom-nav .view-more {
+    display: flex;
+}
+
+body {
     display: flex;
     flex-direction: column;
-   }
+}
 
 section {
     flex-direction: column;
+    padding: 10px;
+    justify-content: center;
 }
 
 article {
@@ -202,6 +215,18 @@ article {
     width: auto;
     height: 130px;
     aspect-ratio: 1;
+}
+
+.title-card {
+    display: none;
+}
+
+.article-body p{
+    overflow: hidden;
+   display: -webkit-box;
+   -webkit-line-clamp: 2; 
+    line-clamp: 2; 
+   -webkit-box-orient: vertical;
 }
 
 header {
