--- a/html-newspaper-article/styles.css
+++ b/html-newspaper-article/styles.css
@@ -1,11 +1,11 @@
 html,
 body {
-    margin: 50px 200px 200px 200px;
+    margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-main {
+.main {
     display: block;
     width: 800px;
     margin: 64px auto;
@@ -35,11 +35,12 @@ a {
     color: rgb(19, 19, 90);
     text-decoration: none;
 }
- .footer {
+ .footer__ {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 30px 0;
+  
  }
 
 .form_field {
