alterações nav bar e hero section

--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -24,4 +24,5 @@ header .headerDesktop_sign {
   justify-content: center;
   position: fixed;
   right: 0;
+  gap: 20px;
 }/*# sourceMappingURL=styles.css.map */
