--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -1,3 +1,9 @@
+body {
+    max-width: 100vw;
+    padding: 0px;
+    margin: 0px;
+}
+
 header {
     width: 100%;
     .headerDesktop-container {
@@ -27,5 +33,6 @@ header {
         justify-content: center;
         position: fixed;
         right: 0;
+        gap: 20px;
     }
 }
