--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 body {
     max-width: 100vw;
     padding: 0px;
     margin: 0px;
+    font-family: "inner", sans-serif;
 }
 
 header {
@@ -11,7 +14,7 @@ header {
         align-items: center;
         border-bottom: solid 1px red;
     }
-    .headerDesktop_middle {
+    .headerDesktop-middle {
         display: flex;
         flex-direction: row;
         ul {
@@ -28,7 +31,7 @@ header {
         }
 
     }
-    .headerDesktop_sign {
+    .headerDesktop-sign {
         display: inline-flex;
         justify-content: center;
         position: fixed;
