--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -4,15 +4,17 @@ body {
     max-width: 100vw;
     padding: 0px;
     margin: 0px;
-    font-family: "inner", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 header {
     width: 100%;
+    height: 64px;
     .headerDesktop-container {
         display: flex;
         align-items: center;
-        border-bottom: solid 1px red;
+        border-bottom: solid 1px #DFDFDF;
+        padding: 8px 16px 8px 16px;
     }
     .headerDesktop-middle {
         display: flex;
@@ -37,5 +39,6 @@ header {
         position: fixed;
         right: 0;
         gap: 20px;
+        padding: 8px 16px 8px 16px;
     }
 }
