--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -36,4 +36,14 @@ header .headerDesktop-sign {
   right: 0;
   gap: 20px;
   padding: 8px 16px 8px 16px;
+}
+
+.hero-section {
+  text-align: center;
+}
+.hero-section .hero-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 4%;
 }/*# sourceMappingURL=styles.css.map */
