--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -42,3 +42,16 @@ header {
         padding: 8px 16px 8px 16px;
     }
 }
+
+.hero-section {
+    text-align: center;
+    .hero-video{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 4%;
+
+       
+    }
+}
+
