--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -41,9 +41,16 @@ header .headerDesktop-sign {
 .hero-section {
   text-align: center;
 }
+.hero-section p {
+  padding: 0 16%;
+}
 .hero-section .hero-video {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 4%;
+  padding-top: 3%;
+}
+
+.about-section {
+  text-align: center;
 }/*# sourceMappingURL=styles.css.map */
