--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -62,6 +62,19 @@ header {
 .about-section {
     text-align: center;
 }
+.advertising-section{
+    display: flex;
+    justify-content: center;
+    .advertising-section-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 80%;
+        height: 202px;
+        background-color: blue;
+
+    }
+}
 
 footer {
     display: flex;
