--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -7,6 +7,8 @@ body {
     font-family: "Inter", sans-serif;
 }
 
+
+
 header {
     width: 100%;
     height: 64px;
@@ -16,6 +18,7 @@ header {
         border-bottom: solid 1px #DFDFDF;
         padding: 8px 16px 8px 16px;
     }
+
     .headerDesktop-middle {
         display: flex;
         flex-direction: row;
@@ -28,28 +31,44 @@ header {
             li {
                 a{
                     text-decoration: none;
+                    font-size: 14px;
+                    font-weight: 400;
                 }
             }
         }
 
     }
-    .headerDesktop-sign {
+    .headerDesktop-links {
         display: inline-flex;
         justify-content: center;
-        position: fixed;
         right: 0;
         gap: 20px;
         padding: 8px 16px 8px 16px;
+        margin-left: auto;
     }
 }
 
 .hero-section {
     text-align: center;
+    .hero-section-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     h1 {
-
+        width: 60%;
+        font-size: 64px;
+        font-weight: 700;
+        line-height: 77px;
+        margin: 0;
     }
     p {
-        padding: 0 16%;
+        width: 50%;
+        text-align: center;
+        padding: 0 2%;
+        font-size: 24px;
+        font-weight: 400;
     }
     .hero-video{
         display: flex;
