--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -31,6 +31,15 @@ header .headerDesktop-middle ul li a {
   font-size: 14px;
   font-weight: 400;
 }
+header .btn {
+  text-decoration: none;
+  width: auto;
+  padding: 8px 16px 8px 16px;
+}
+header .btn-signup {
+  color: white;
+  background-color: #000000;
+}
 header .headerDesktop-links {
   display: inline-flex;
   justify-content: center;
@@ -38,6 +47,10 @@ header .headerDesktop-links {
   gap: 20px;
   padding: 8px 16px 8px 16px;
   margin-left: auto;
+}
+header .headerDesktop-links .btn-signin {
+  text-decoration: none;
+  color: #000000;
 }
 
 .hero-section {
