--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -30,6 +30,7 @@ header .headerDesktop-middle ul li a {
   text-decoration: none;
   font-size: 14px;
   font-weight: 400;
+  color: #000000;
 }
 header .btn {
   text-decoration: none;
