--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -33,6 +33,7 @@ header {
                     text-decoration: none;
                     font-size: 14px;
                     font-weight: 400;
+                    color: #000000;
                 }
             }
         }
@@ -49,7 +50,7 @@ header {
         color: white;
         background-color: #000000;
     }
-    
+
     .headerDesktop-links {
         display: inline-flex;
         justify-content: center;
