--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -1,4 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+.btn {
+  text-decoration: none;
+  width: auto;
+  padding: 8px 16px 8px 16px;
+}
+
+.btn-signup {
+  color: white;
+  background-color: #000000;
+}
+
+.btn-trial {
+  color: white;
+  background-color: #0064DA;
+  border: none;
+}
+
+.btn-learnmore {
+  color: white;
+  background-color: #0064DA;
+}
+
+.btn-signin {
+  text-decoration: none;
+  color: #000000;
+}
+
 body {
   max-width: 100vw;
   padding: 0px;
@@ -32,15 +59,6 @@ header .headerDesktop-middle ul li a {
   font-weight: 400;
   color: #000000;
 }
-header .btn {
-  text-decoration: none;
-  width: auto;
-  padding: 8px 16px 8px 16px;
-}
-header .btn-signup {
-  color: white;
-  background-color: #000000;
-}
 header .headerDesktop-links {
   display: inline-flex;
   justify-content: center;
@@ -48,10 +66,6 @@ header .headerDesktop-links {
   gap: 20px;
   padding: 8px 16px 8px 16px;
   margin-left: auto;
-}
-header .headerDesktop-links .btn-signin {
-  text-decoration: none;
-  color: #000000;
 }
 
 .hero-section {
@@ -88,6 +102,11 @@ header .headerDesktop-links .btn-signin {
   text-align: center;
 }
 
+.cards-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .advertising-section {
   display: flex;
   justify-content: center;
