--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+@import "./buttons";
+
 body {
     max-width: 100vw;
     padding: 0px;
@@ -39,17 +41,7 @@ header {
         }
 
     }
-
-    .btn {
-        text-decoration: none;
-        width: auto;
-        padding: 8px 16px 8px 16px;
-       
-    }
-    .btn-signup{
-        color: white;
-        background-color: #000000;
-    }
+    
 
     .headerDesktop-links {
         display: inline-flex;
@@ -58,10 +50,7 @@ header {
         gap: 20px;
         padding: 8px 16px 8px 16px;
         margin-left: auto;
-        .btn-signin {
-            text-decoration: none;
-            color: #000000
-        }
+      
 
     }
 }
@@ -99,6 +88,17 @@ header {
 .about-section {
     text-align: center;
 }
+
+.cards-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .card{
+    
+        
+    }
+}
+
 .advertising-section{
     display: flex;
     justify-content: center;
@@ -126,5 +126,6 @@ footer {
         flex-direction: column;
     }
 }
+
 
 
