--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -7,6 +7,7 @@ body {
     padding: 0px;
     margin: 0px;
     font-family: "Inter", sans-serif;
+    
 }
 
 
@@ -89,15 +90,42 @@ header {
     text-align: center;
 }
 
-.cards-section{
+.cards-section {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    .card{
+    .card {
+        box-sizing: content-box;
+        height: 119px;
+        width: 145px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #FFFFFF;
+        border: #DFDFDF;
     
-        
-    }
-}
+        .circle {
+          width: 25%;
+          height: 34%;
+          background-color: blue;
+          border-radius: 50%;
+        }
+        h4{
+           font-size: 14px;
+           font-weight: 400px;
+           margin: 0px;
+           padding: 8px;
+        }
+        p{
+            text-align: center;
+            font-size: 10px;
+            font-weight: 400px;
+            line-height: 15px;
+            
+        }
+      }
+  }
 
 .advertising-section{
     display: flex;
