--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -55,7 +55,11 @@ header {
 
     }
 }
+section{
+    display: flex;
+    justify-content: center;
 
+}
 .hero-section {
     text-align: center;
     .hero-section-container {
@@ -89,25 +93,34 @@ header {
 .about-section {
     text-align: center;
 }
-
-.cards-section {
+.section-container{
     display: flex;
-    flex-direction: row;
     justify-content: center;
+    flex-direction: column;
+
+}
+.cards-section {
+    width: 539px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
     .card {
         box-sizing: content-box;
-        height: 119px;
-        width: 145px;
+        height: 169px;
+        width: 143px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background-color: #FFFFFF;
-        border: #DFDFDF;
+        border: 1px solid #DFDFDF;
+        border-radius: 4px;
     
         .circle {
-          width: 25%;
-          height: 34%;
+          width: 44px;
+          height: 44px;
           background-color: blue;
           border-radius: 50%;
         }
