alinhar ao centro cards section

--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -113,6 +113,15 @@ section {
   flex-direction: column;
 }
 
+.cards-section-container {
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+}
+
 .cards-section {
   width: 539px;
   display: flex;
