--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -99,6 +99,13 @@ section{
     flex-direction: column;
 
 }
+.cards-section-container{
+    text-align: center;
+}
+.card-container{
+    display: flex;
+    justify-content: center;
+}
 .cards-section {
     width: 539px;
     display: flex;
