alteraçoes articles section

--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -174,6 +174,53 @@ section {
   background-color: blue;
 }
 
+.articles-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.articles-section .article-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.articles-section .article-body {
+  display: flex;
+  flex-wrap: wrap;
+  width: 935px;
+  gap: 10px;
+}
+.articles-section .article-body .wrapper-box {
+  display: flex;
+  flex-direction: column;
+  width: 218px;
+  height: auto;
+}
+.articles-section .article-body .wrapper-box .wrapper-box-img {
+  width: 218px;
+  height: 121px;
+  background-color: silver;
+}
+.articles-section .article-body .wrapper-box .wrapper-box-text {
+  text-align: left;
+  font-size: 10px;
+  line-height: 15px;
+}
+.articles-section .article-body .wrapper-box .wrapper-box-user {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+.articles-section .article-body .wrapper-box .wrapper-box-user .user-circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 13px;
+  background-color: silver;
+}
+
 footer {
   display: flex;
   justify-content: space-around;
