--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -208,6 +208,10 @@ section{
                 border-radius: 13px;
                 background-color: silver;
             }
+            h6 {
+                font-size: 8px;
+                font-weight: 400;
+            }
         }
       }
     }
