--- a/html-css-final/landing-page/assets/css/buttons.css
+++ b/html-css-final/landing-page/assets/css/buttons.css
@@ -4,6 +4,10 @@
   padding: 8px 16px 8px 16px;
 }
 
+.btn-round {
+  border-radius: 19px;
+}
+
 .btn-signup {
   color: white;
   background-color: #000000;
@@ -23,4 +27,70 @@
 .btn-signin {
   text-decoration: none;
   color: #000000;
+}
+
+.btn-development {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 20px;
+  font-size: 10px;
+  font-weight: 400;
+  background-color: #FFFFFF;
+  border: 0.5px solid #ECEBEB;
+}
+
+.btn-blockchain {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 20px;
+  font-size: 10px;
+  font-weight: 400;
+  background-color: #FFFFFF;
+  border: 0.5px solid #ECEBEB;
+}
+
+.btn-nextjs {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 20px;
+  font-size: 10px;
+  font-weight: 400;
+  background-color: #FFFFFF;
+  border: 0.5px solid #ECEBEB;
+}
+
+.btn-reactjs {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 20px;
+  font-size: 10px;
+  font-weight: 400;
+  background-color: #FFFFFF;
+  border: 0.5px solid #ECEBEB;
+}
+
+.btn-development-secundary {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 18px;
+  font-size: 8px;
+  font-weight: 400;
+  background-color: #FFFFFF;
+  border: 0.5px solid #ECEBEB;
+}
+
+.btn-blockchain-secundary {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 18px;
+  font-size: 8px;
+  font-weight: 400;
+  background-color: #FFFFFF;
+  border: 0.5px solid #ECEBEB;
 }/*# sourceMappingURL=buttons.css.map */
