--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-@import "./buttons";
+@import "./buttons.css";
 
 body {
     max-width: 100vw;
@@ -166,31 +166,42 @@ section{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-bottom: 5%;
   
     .article-header {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      padding-bottom: 3%;
+      .articles-header-buttons{
+        display: flex;
+        gap: 12px;
+      }
     }
   
     .article-body {
       display: flex;
       flex-wrap: wrap;
       width: 935px;
-      gap: 10px;
+      gap: 20px;
   
       .wrapper-box {
         display: flex;
         flex-direction: column;
         width: 218px;
         height: auto;
+        gap: 12px;
        
   
         .wrapper-box-img {
           width: 218px;
           height: 121px;
           background-color: silver;
+        }
+        .wrapper-box-buttons{
+            display: flex;
+            flex-direction: row;
         }
         .wrapper-box-text{
             text-align: left;
