alteraçoes advertising section

--- a/html-css-final/landing-page/assets/css/buttons.scss
+++ b/html-css-final/landing-page/assets/css/buttons.scss
@@ -94,3 +94,17 @@
     background-color: #FFFFFF;
     border: 0.5px solid #ECEBEB;
 }
+
+// botão advertising section
+.btn-advertising{
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 33px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #0064DA;
+    background-color: #FFFFFF;
+    padding: 8px 16px 8px 16px;
+    border: none;
+}
