--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -135,19 +135,6 @@ section {
   line-height: 15px;
 }
 
-.advertising-section {
-  display: flex;
-  justify-content: center;
-}
-.advertising-section .advertising-section-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 80%;
-  height: 202px;
-  background-color: blue;
-}
-
 .articles-section {
   display: flex;
   flex-direction: column;
@@ -207,6 +194,28 @@ section {
 }
 .articles-section .article-body .wrapper-box .wrapper-box-user h6 {
   font-size: 8px;
+  font-weight: 400;
+}
+
+.advertising-section {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5%;
+}
+.advertising-section .advertising-section-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 80%;
+  height: 202px;
+  background-color: #0064DA;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+.advertising-section .advertising-section-container p {
+  font-size: 30px;
+  color: #FFFFFF;
   font-weight: 400;
 }
 
