--- a/html-css-final/landing-page/assets/css/buttons.css
+++ b/html-css-final/landing-page/assets/css/buttons.css
@@ -93,4 +93,17 @@
   font-weight: 400;
   background-color: #FFFFFF;
   border: 0.5px solid #ECEBEB;
+}
+
+.btn-advertising {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 33px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #0064DA;
+  background-color: #FFFFFF;
+  padding: 8px 16px 8px 16px;
+  border: none;
 }/*# sourceMappingURL=buttons.css.map */
