--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -240,6 +240,8 @@ footer {
     display: flex;
     justify-content: space-around;
     padding-bottom: 2%;
+    padding-top: 1%;
+    border-top: solid 1px #DFDFDF;
     
     .footer-left{
         display: flex;
