--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -49,6 +49,8 @@ section {
 
 .hero-section {
   text-align: center;
+  padding-top: 2%;
+  padding-bottom: 8%;
 }
 .hero-section .hero-section-container {
   display: flex;
@@ -64,7 +66,7 @@ section {
   margin: 0;
 }
 .hero-section p {
-  width: 50%;
+  width: 58%;
   text-align: center;
   padding: 0 2%;
   font-size: 24px;
@@ -76,15 +78,21 @@ section {
   align-items: center;
   padding-top: 3%;
 }
+.hero-section .hero-video .video {
+  width: 460px;
+  height: auto;
+}
 
 .about-section {
   text-align: center;
+  padding-bottom: 3%;
 }
 
 .section-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding-bottom: 5%;
 }
 
 .cards-section-container {
