--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -62,6 +62,8 @@ section{
 }
 .hero-section {
     text-align: center;
+    padding-top: 2%;
+    padding-bottom: 8%;
     .hero-section-container {
         display: flex;
         flex-direction: column;
@@ -76,7 +78,7 @@ section{
         margin: 0;
     }
     p {
-        width: 50%;
+        width: 58%;
         text-align: center;
         padding: 0 2%;
         font-size: 24px;
@@ -87,16 +89,22 @@ section{
         flex-direction: column;
         align-items: center;
         padding-top: 3%;
+        .video{
+            width: 460px;
+            height: auto;
+        }
        
     }
 }
 .about-section {
     text-align: center;
+    padding-bottom: 3%;
 }
 .section-container{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding-bottom: 5%;;
 
 }
 .cards-section-container{
