alterções about section container

--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -85,7 +85,25 @@ section {
 
 .about-section {
   text-align: center;
-  padding-bottom: 3%;
+  background-color: #F5F5F5;
+  padding-top: 3%;
+  padding-bottom: 1%;
+}
+.about-section .about-section-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.about-section .about-section-container h1 {
+  font-size: 40px;
+  font-weight: 500;
+}
+.about-section .about-section-container p {
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  width: 50%;
 }
 
 .section-container {
@@ -93,6 +111,7 @@ section {
   justify-content: center;
   flex-direction: column;
   padding-bottom: 5%;
+  padding-top: 2%;
 }
 
 .cards-section-container {
