--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -110,7 +110,7 @@ section {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-bottom: 5%;
+  padding-bottom: 2%;
   padding-top: 2%;
   background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%, #220000 50%, #220000 100%);
 }
@@ -182,6 +182,7 @@ section {
   justify-content: center;
   align-items: center;
   padding-bottom: 5%;
+  padding-top: 5%;
 }
 .articles-section .article-header {
   display: flex;
@@ -189,6 +190,10 @@ section {
   align-items: center;
   flex-direction: column;
   padding-bottom: 3%;
+}
+.articles-section .article-header h1 {
+  font-size: 30px;
+  font-weight: 500;
 }
 .articles-section .article-header .articles-header-buttons {
   display: flex;
