--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -123,7 +123,7 @@ section{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-bottom: 5%;;
+    padding-bottom: 2%;
     padding-top: 2%;
     background: linear-gradient(to bottom, #ffffff 0%, #ffffff 50%, #220000 50%, #220000 100%);
 }
@@ -194,6 +194,7 @@ section{
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
+    padding-top: 5%;
   
     .article-header {
       display: flex;
@@ -201,6 +202,10 @@ section{
       align-items: center;
       flex-direction: column;
       padding-bottom: 3%;
+      h1{
+        font-size: 30px;
+        font-weight: 500;
+      }
       .articles-header-buttons{
         display: flex;
         gap: 12px;
