--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -147,7 +147,7 @@ section {
 }
 .cards-section .card {
   box-sizing: content-box;
-  height: 169px;
+  height: 145px;
   width: 143px;
   display: flex;
   flex-direction: column;
@@ -165,15 +165,16 @@ section {
 }
 .cards-section .card h4 {
   font-size: 14px;
-  font-weight: 400px;
+  font-weight: 400;
   margin: 0px;
   padding: 8px;
 }
 .cards-section .card p {
   text-align: center;
   font-size: 10px;
-  font-weight: 400px;
+  font-weight: 400;
   line-height: 15px;
+  margin: 0px;
 }
 
 .articles-section {
