--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -72,7 +72,12 @@ section {
   font-size: 24px;
   font-weight: 400;
 }
+.hero-section .hero-button {
+  display: flex;
+  gap: 10px;
+}
 .hero-section .hero-video {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -282,6 +287,25 @@ footer .footer-left h1 {
   font-weight: 400;
 }
 footer .footer-left p {
+  font-size: 14px;
+  font-weight: 400;
+}
+footer input[type=email] {
+  width: 241px;
+  height: 33px;
+  box-sizing: border-box;
+  border: 1px solid #EBEBEB;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+}
+footer input[type=submit] {
+  width: 99px;
+  height: 33px;
+  box-sizing: border-box;
+  background-color: #000000;
+  color: #FFFFFF;
   font-size: 14px;
   font-weight: 400;
 }
