--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -84,12 +84,18 @@ section{
         font-size: 24px;
         font-weight: 400;
     }
+    .hero-button {
+        display: flex;
+        gap: 10px;
+    }
     .hero-video{
+        position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-top: 3%;
         .video{
+           
             width: 460px;
             height: auto;
         }
@@ -301,7 +307,30 @@ footer {
             font-size: 14px;
             font-weight: 400;
         }
+      
     }
+
+    input[type=email] {
+        width: 241px;
+        height: 33px;
+        box-sizing: border-box;
+        border: 1px solid #EBEBEB;
+        border-radius: 4px;
+        font-size: 14px;
+        font-weight: 400;
+        color: #000000;
+      }
+
+      input[type=submit] {
+        width: 99px;
+        height: 33px;
+        box-sizing: border-box;
+        background-color:  #000000;
+        color: #FFFFFF;
+        font-size: 14px;
+        font-weight: 400;
+        
+      }
 
     .footer-middle-left{
         display: flex;
