--- a/html-css-final/landing-page/assets/css/styles.css
+++ b/html-css-final/landing-page/assets/css/styles.css
@@ -50,7 +50,7 @@ section {
 .hero-section {
   text-align: center;
   padding-top: 2%;
-  padding-bottom: 8%;
+  padding-bottom: 15%;
 }
 .hero-section .hero-section-container {
   display: flex;
@@ -99,6 +99,14 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+.about-section .about-section-container .about-section-line {
+  position: absolute;
+  top: -40px;
+  width: 100px;
+  border: 1px solid #B8B8B8;
+  transform: rotate(90deg);
 }
 .about-section .about-section-container h1 {
   font-size: 40px;
