--- a/html-css-final/landing-page/assets/css/styles.scss
+++ b/html-css-final/landing-page/assets/css/styles.scss
@@ -63,12 +63,13 @@ section{
 .hero-section {
     text-align: center;
     padding-top: 2%;
-    padding-bottom: 8%;
+    padding-bottom: 15%;
     .hero-section-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+      
     }
     h1 {
         width: 60%;
@@ -112,6 +113,15 @@ section{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
+        .about-section-line{
+            position: absolute;
+            top: -40px;
+            width: 100px;
+            border: 1px solid #B8B8B8;
+            transform: rotate(90deg);
+
+        }  
         h1 {
             font-size: 40px;
             font-weight: 500;
